added some features

--- a/template/businessprofile.html
+++ b/template/businessprofile.html
@@ -22,7 +22,6 @@
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -34,15 +33,13 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <span class="weconnect">
-                            <span class="we">We</span>Connect</span> Join Us
+                            <span class="we">We</span>Connect</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-header">Top businesses</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="sign-in.html">sign-in</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="Register-business.html">Register business</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">Travel</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">health</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Yellow Pages</a>
 
@@ -78,18 +75,16 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4>User Profile</h4>
-                        <a button type="button" class="btn btn-primary btn-sm" href="#">Edit</button></a>
+                        <a button type="button" class="btn btn-primary btn-sm" href="#">Edit</button>
+                        </a>
                     </div>
                     <div class="panel-body">
-
                         <div class="box box-info">
-
                             <div class="box-body">
                                 <div class="col-sm-6">
                                     <div align="center">
                                         <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1"
                                             class="img-circle img-responsive">
-
                                         <input id="profile-image-upload" class="hidden" type="file">
                                         <div class="profile">click here to change profile image</div>
                                     </div>
@@ -147,7 +142,7 @@
                                     <div class="bot-border"></div>
 
                                     <div class="col-sm-5 col-xs-6 tital ">Religion:</div>
-                                    <div class="col-sm-7">christainint</div>
+                                    <div class="col-sm-7">christain</div>
 
                                 </div>
 
@@ -159,8 +154,14 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
+        <form>
+            <div class="form-group">
+                <label for="FormControlFile1">upload a file</label>
+                <input type="file" class="form-control-file" id="FormControlFile1">
+            </div>
+        </form>
         <!--reviews-->
 
         <!--/.reviews-->
@@ -210,8 +211,8 @@
             <!--Copyright-->
             <div class="footer-copyright py-3 text-center">
                 <div class="container-fluid">
-                    © 2018 Copyright:
-                    <span id="copyright"> Amaechi-chuks.com </sp>
+                        copyright © WeConnect 2018: Developer
+                    <span id="copyright"> Amaechi </sp>
 
                 </div>
             </div>
