--- a/template/index.html
+++ b/template/index.html
@@ -28,34 +28,30 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home
                         <span class="sr-only">(current)</span>
+
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <span class="weconnect">
-                            <span class="we">We</span>Connect</span>  Join Us 
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-header">Top businesses</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="sign-in.html">sign-in</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="Register-business.html">Register business</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">Travel</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">health</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Yellow Pages</a>
-
-                    </div>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
+                                <a businessID="" class="dropdown-item text-capitalize" href="sign-in.html">sign-in</a>
+                                <a businessID="" class="dropdown-item text-capitalize" href="Register-business.html">Register business</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">coming Soon!</a>
+                            </div>
                 </li>
             </ul>
+            <a href="businessCatalog.html" class="btn btn-primary" type="submit">BuisnessCatalog</a>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+         <!--   -->
         </div>
     </nav>
-
 
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
@@ -68,7 +64,6 @@
             </span>
         </div>
     </div>
-
 
     <div class="container-fluid">
         <div class="row">
@@ -136,8 +131,6 @@
                 <h2 class="d-md-none h3 text-center p-1 mt-4 bg-dark colorWhite"></h2>
                 <b>recently added Businesses</b>
                 </h2>
-
-
                 <div class="card text-center mb-2">
                     <h3 class="card-title">
                         <b></b>Chuks Cosmetics</b>
@@ -148,7 +141,7 @@
                     <div class="card-body">
                         <p class="card-text">chuks Cosmetics offers makeup, skincare and beauty products made with high-performance naturals.
                             <br /> Discover our cruelty-free and eco-friendly makeup today. chuks cosmetics.</p>
-                        <a href="recentlyaddbiz.html" class="btn btn-primary">recently added</a>
+                        <a href="#" class="btn btn-primary">recently added</a>
                     </div>
 
                 </div>
@@ -249,8 +242,8 @@
         <!--Copyright-->
         <div class="footer-copyright py-3 text-center">
             <div class="container-fluid">
-                © 2018 Copyright:
-                <span id="copyright"> Amaechi </sp>
+               copyright © WeConnect 2018: Developer
+                <span id="copyright"> Amaechi </span>
 
             </div>
         </div>
