--- a/template/sign-up.html
+++ b/template/sign-up.html
@@ -34,17 +34,14 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <span class="weconnect">
-                            <span class="we">We</span>Connect</span> Business Listings
+                            <span class="we">We</span>Connect</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-header">Top businesses</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">sign-in</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">Technology</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">Recruitment</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">Travel</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">health</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="sign-in.html">sign-in</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="Register-business.html">Register businesses</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Yellow Pages</a>
+                        <a class="dropdown-item" href="#">Coming Soon</a>
 
                     </div>
                 </li>
@@ -360,7 +357,7 @@
                     <!--Copyright-->
                     <div class="footer-copyright py-3 text-center">
                         <div class="container-fluid">
-                            © 2018 Copyright:
+                                copyright © WeConnect 2018: Developer
                             <span id="copyright"> Amaechi </sp>
 
                         </div>
