--- a/template/Register-business.html
+++ b/template/Register-business.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="businesses.html">Home
+                    <a class="nav-link" href="#">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -34,17 +34,14 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <span class="weconnect">
-                            <span class="we">We</span>Connect</span> Business Listings
+                            <span class="we">We</span>Connect</span> 
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-header">Top businesses</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="sign-in.html">sign-in</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="Register-business.html">Register business</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">Travel</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">health</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Yellow Pages</a>
+                        <a class="dropdown-item" href="#">Coming Soon</a>
 
                     </div>
                 </li>
@@ -181,8 +178,8 @@
                     <!--Copyright-->
                     <div class="footer-copyright py-3 text-center">
                         <div class="container-fluid">
-                            © 2018 Copyright:
-                            <span id="copyright"> Amaechi-chuks.com </sp>
+                                copyright © WeConnect 2018: Developer
+                            <span id="copyright"> Amaechi</span>
 
                         </div>
                     </div>
