fix the placeholder of sign-in feature

--- a/template/sign-in.html
+++ b/template/sign-in.html
@@ -88,7 +88,7 @@
                                 <div class="input-group-addon" style="width: 2.6rem">
                                     <i class="fa fa-at"></i>
                                 </div>
-                                <input type="email" name="email" class="form-control" id="email" placeholder="enter an email address" required autofocus>
+                                <input type="email" name="email" class="form-control" id="email" placeholder="enter an Email address" required autofocus>
                             </div>
                         </div>
                     </div>
