change the profile name

--- a/template/businessprofile.html
+++ b/template/businessprofile.html
@@ -90,7 +90,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h4 div class="profile1">Amaechi oil servicing company</h4>
+                                    <h4 div class="profile1">Amaechi servicing company</h4>
                                     </span>
                                     <span>
                                         <p>
