--- a/template/index.html
+++ b/template/index.html
@@ -56,12 +56,12 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
-            <span class="text-center">
+           <!-- <span class="text-center">
                 <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
                 <a class="btn text-capitalize jumbotronSubText font-underline" href="#">
                     <u>join us</u>
                 </a>
-            </span>
+            </span>-->
         </div>
     </div>
 
