removed unnecessary tag

--- a/template/businessCatalog.html
+++ b/template/businessCatalog.html
@@ -56,9 +56,7 @@
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
             <span class="text-center">
                 <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
-                <a class="btn text-capitalize jumbotronSubText font-underline" href="#">
-                    <u>join us</u>
-                </a>
+
             </span>
         </div>
     </div>
@@ -85,7 +83,9 @@
 
                             <div class="row col-sm-7">
 
-                                <p class="container-fluid text-align-center"><b>DETAILS:</b> </p>
+                                <p class="container-fluid text-align-center">
+                                    <b>DETAILS:</b>
+                                </p>
                                 <div class="col-sm-5 col-xs-1 tital ">location:</div>
                                 <div class="col-sm-7">Lagos</div>
                                 <div class="clearfix"></div>
@@ -139,7 +139,7 @@
 
                 </h2>
                 <div class="card text-center mb-2">
-                    
+
                     <img class="card-img-top " src="./images/beauty/Beauty-image.jpg" alt="Business Image">
 
                     <img class="card-img-top" src="./images/beauty/Beauty-image02.jpg" alt="Business Image">
@@ -148,72 +148,72 @@
                 </div>
 
 
+
                 </div>
-        </div>
 
 
-        <!--Footer-->
-        <footer class="pt-4 mt-4 bg-dark">
+                <!--Footer-->
+                <footer class="pt-4 mt-4 bg-dark">
 
-            <!--Footer Links-->
-            <div class="container-fluid text-center text-md-left">
-                <div class="row">
+                    <!--Footer Links-->
+                    <div class="container-fluid text-center text-md-left">
+                        <div class="row">
 
-                    <!--First column-->
-                    <div class="col-md-6">
-                        <h5 id="footerAppTitle" class="text-uppercase weconnect">
-                            <span class="we">We</span>Connect</h5>
-                        <p>Connecting People... What are you waiting for?</p>
+                            <!--First column-->
+                            <div class="col-md-6">
+                                <h5 id="footerAppTitle" class="text-uppercase weconnect">
+                                    <span class="we">We</span>Connect</h5>
+                                <p>Connecting People... What are you waiting for?</p>
+                            </div>
+                            <!--/.First column-->
+
+                            <!--Second column-->
+                            <div class="col-md-6">
+                                <h5 class="text-uppercase">Useful Links</h5>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="#!">Terms and Conditions</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Privacy Policy</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Contents Guidelines</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!--/.Second column-->
+                        </div>
                     </div>
-                    <!--/.First column-->
+                    <!--/.Footer Links-->
+                    <hr />
+                    <!--Copyright-->
+                    <div class="footer-copyright py-3 text-center">
+                        <div class="container-fluid">
+                            copyright © WeConnect 2018: Developer
+                            <span id="copyright"> Amaechi </sp>
 
-                    <!--Second column-->
-                    <div class="col-md-6">
-                        <h5 class="text-uppercase">Useful Links</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="#!">Terms and Conditions</a>
-                            </li>
-                            <li>
-                                <a href="#!">Privacy Policy</a>
-                            </li>
-                            <li>
-                                <a href="#!">Contents Guidelines</a>
-                            </li>
-                            <li>
-                                <a href="#!">Contact Us</a>
-                            </li>
-                        </ul>
+                        </div>
                     </div>
-                    <!--/.Second column-->
-                </div>
-            </div>
-            <!--/.Footer Links-->
-            <hr />
-            <!--Copyright-->
-            <div class="footer-copyright py-3 text-center">
-                <div class="container-fluid">
-                    copyright © WeConnect 2018: Developer
-                    <span id="copyright"> Amaechi </sp>
+                    <!--/.Copyright-->
 
-                </div>
-            </div>
-            <!--/.Copyright-->
-
-        </footer>
-        <!--/.Footer-->
+                </footer>
+                <!--/.Footer-->
 
 
 
-        <!-- jQuery first, then Tether, then Bootstrap JS. -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
+                <!-- jQuery first, then Tether, then Bootstrap JS. -->
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                    crossorigin="anonymous"></script>
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                    crossorigin="anonymous"></script>
 
-        <!-- Custom  Javascript -->
-        <script src="./js/main.js"></script>
+                <!-- Custom  Javascript -->
+                <script src="./js/main.js"></script>
 
 </body>
 
